<resources>
    <string name="app_name">CarLoan</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Car Loan</string>
    <string name="second_fragment_label">Interest</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="bank">Bank</string>
    <string name="interest">Interest Rate(%)</string>
    <string name="buttonClose">Close</string>

    <string name="carLoan">Car Loan</string>
    <string name="carPrice">Car Price:</string>
    <string name="downPayment">Down Payment:</string>
    <string name="interestRate">Interest Rate(%):</string>
    <string name="loanPeriod">Loan Period (year):</string>
    <string name="salary">Salary:</string>
    <string name="isUniGraduate">I\'m a uni graduate</string>
</resources>